##Text encoding: utf-8

2011-05-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fontsel.cc: fixed size issue.
	* libs/gcr/gcrcrystalviewer.cc: ditto.
	* libs/gcu/chem3ddoc.cc: add a CreateView() method.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcu/glview.h: add virtual GL related methoods.
	* libs/gcugtk/Makefile.am: add new Chem3dDoc class.
	* libs/gcugtk/chem3ddoc.cc: ditto.
	* libs/gcugtk/chem3ddoc.h: ditto.
	* libs/gcugtk/gcuchem3dviewer.cc: fixed size issue.
	* libs/gcugtk/gcuspectrumviewer.cc: ditto.
	* libs/gcugtk/glview.cc: implement virtual GL related methoods.
	* libs/gcugtk/glview.h: ditto.
	* programs/3d/document.cc: derive from gcugtk::Chem3dDoc.
	* programs/3d/document.h: ditto.

2011-05-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/line-item.cc: add support for dashes.
	* libs/gccv/line-item.h: ditto.
	* libs/gccv/line.cc: ditto.
	* plugins/paint/selection/plugin.cc: generate the merge tool icon using
	the canvas.

2011-05-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: make m_Color a settable property.
	* libs/gccv/canvas.h: ditto.
	* libs/gccv/line.cc: use auto color when needed.
	* libs/gccv/rectangle.cc: ditto.
	* libs/gcp/application.cc: build icons from canvas when provided.
	* libs/gcp/application.h: ditto.
	* plugins/paint/arrows/plugin.cc: ditto.
	* plugins/paint/bonds/plugin.cc: ditto.
	* plugins/paint/cycles/plugin.cc: ditto.
	* plugins/paint/selection/plugin.cc: ditto.
	* plugins/paint/text/plugin.cc: ditto.

2011-05-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: replace expose event by draw event.
	* libs/gcp/application.cc: restore buttons bitmaps, needs work.
	* libs/gcp/tools.cc: use GtkGrid instead of GtkBox.
	* libs/gcp/tools.h: ditto.
	* libs/gcugtk/spectrumdoc.cc: set min and max on loadinf XY..XY values.
	* ui/paint/tools.ui: use GtkGrid instead of GtkBox.

2011-05-11  Jean Bréfort  <jean.brefort@normalesup.org>